Refactored to plot all figures to 1 pdf

--- a/Development Application Review Process (copy 1).ipynb
+++ b/Development Application Review Process (copy 1).ipynb
@@ -91,12 +91,111 @@
     "    elif 7 < time_delta <= 14:\n",
     "        cell_colors.append('#a6d96a')\n",
     "    elif time_delta > 14:\n",
-    "        cell_colors.append('#1a9641')"
+    "        cell_colors.append('#1a9641')\n",
+    "\n",
+    "cell_colors = [[x,x,x,x,x,x,x] for x in cell_colors]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def pie_timeline():\n",
+    "#     classes = ['Overdue', '0-7 Days', '8-14 Days', '> 14 Days']\n",
+    "#     sizes = [df.loc[df.PieTimeline == x].shape[0] for x in classes]\n",
+    "#     labels = [f'Overdue\\n{sizes[0]} Projects', f'0-7 Days\\n{sizes[1]} Projects', f'8-14 Days\\n{sizes[2]} Projects', f'> 14 Days\\n{sizes[3]} Projects']\n",
+    "#     colors = ['#d7191c','#fdae61','#a6d96a','#1a9641']\n",
+    "#     explode = (0.05,0.05,0.05,0.05)\n",
+    "\n",
+    "#     plt.pie(sizes, colors = colors, labels=labels, autopct='%1.1f%%', startangle=90, pctdistance=0.85, explode = explode)\n",
+    "#     #draw circle\n",
+    "#     centre_circle = plt.Circle((0,0),0.70,fc='white')\n",
+    "#     fig = plt.gcf()\n",
+    "#     fig.gca().add_artist(centre_circle)\n",
+    "#     plt.title('Comment Submission Due Date Timeline')\n",
+    "#     plt.tight_layout()\n",
+    "    \n",
+    "#     plt.savefig('./output/drp_pie.png', dpi=600, facecolor='w', edgecolor='w',\n",
+    "#         orientation='portrait', papertype='letter', format=None,\n",
+    "#         transparent=False, bbox_inches=None, pad_inches=0.1,\n",
+    "#         frameon=None, metadata=None)\n",
+    "    \n",
+    "# pie_timeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table_df = pd.DataFrame(df[['Project', 'ApplicationType', 'Submission', 'CommentsDue', 'FullCommentPeriod', 'Planner', 'Engineer']], copy=True).sort_values('CommentsDue')\n",
+    "\n",
+    "# col_labels = ['Project', 'Application Type', 'Submission', 'Comments Due', 'Comment Period', 'Planner', 'Engineer']\n",
+    "# cell_text = []\n",
+    "# t = []\n",
+    "# cell_colors = []\n",
+    "# for x in table_df.index.values.tolist():\n",
+    "#     t.append(table_df.loc[df.index == x].values.tolist())\n",
+    "# colors = ['#d7191c','#fdae61','#a6d96a','#1a9641']\n",
+    "\n",
+    "# for x in t:\n",
+    "#     cell_text.append(x[0])\n",
+    "#     time_delta = (x[0][3] - today).days\n",
+    "#     if time_delta < 0:\n",
+    "#         cell_colors.append('#d7191c')\n",
+    "#     elif 0 <= time_delta <= 7:\n",
+    "#         cell_colors.append('#fdae61')\n",
+    "#     elif 7 < time_delta <= 14:\n",
+    "#         cell_colors.append('#a6d96a')\n",
+    "#     elif time_delta > 14:\n",
+    "#         cell_colors.append('#1a9641')\n",
+    "\n",
+    "# cell_colors = [[x,x,x,x,x,x,x] for x in cell_colors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# fig, axs = plt.subplots(1,1)\n",
+    "# axs.axis('tight')\n",
+    "# axs.axis('off')\n",
+    "\n",
+    "# table = axs.table(\n",
+    "#     cellText=cell_text, \n",
+    "#     cellColours= cell_colors, \n",
+    "#     cellLoc='left', \n",
+    "#     colWidths=[0.65, 0.25, 0.15, 0.2, 0.18, 0.1, 0.1], \n",
+    "#     rowLabels=None, \n",
+    "#     rowColours=None, \n",
+    "#     rowLoc='left', \n",
+    "#     colLabels=col_labels, \n",
+    "#     colColours=None, \n",
+    "#     colLoc='left', \n",
+    "#     loc='center', \n",
+    "#     bbox=None, \n",
+    "#     edges='closed')\n",
+    "\n",
+    "# table.auto_set_font_size(False)\n",
+    "# table.set_fontsize(6)\n",
+    "# plt.title('Summary of Applications', y = 1.05)\n",
+    "\n",
+    "# plt.savefig('./output/drp_table.png', dpi=600, facecolor='w', edgecolor='w',\n",
+    "#         orientation='portrait', papertype='letter', format=None,\n",
+    "#         transparent=False, bbox_inches='tight', pad_inches=0.1,\n",
+    "#         frameon=None, metadata=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -115,10 +214,6 @@
     }
    ],
    "source": [
-    "#Table Data\n",
-    "cell_colors = [[x,x,x,x,x,x,x] for x in cell_colors]\n",
-    "\n",
-    "#Pie Data\n",
     "classes = ['Overdue', '0-7 Days', '8-14 Days', '> 14 Days']\n",
     "sizes = [df.loc[df.PieTimeline == x].shape[0] for x in classes]\n",
     "labels = [f'Overdue\\n{sizes[0]} Projects', f'0-7 Days\\n{sizes[1]} Projects', f'8-14 Days\\n{sizes[2]} Projects', f'> 14 Days\\n{sizes[3]} Projects']\n",
@@ -148,7 +243,8 @@
     "table_plot(ax1)\n",
     "pie_plot(ax2)\n",
     "\n",
-    "plt.savefig(f'./output/NDSReportPreConstructionApplications_{today_str}.pdf', dpi=600, facecolor='w', edgecolor='w',\n",
+    "#plt.show()\n",
+    "plt.savefig(f'./output/drp_{today_str}.pdf', dpi=600, facecolor='w', edgecolor='w',\n",
     "        orientation='portrait', papertype='letter', format=None,\n",
     "        transparent=False, bbox_inches='tight', pad_inches=0.5,\n",
     "        frameon=None, metadata=None)"
